--- a/resources/styles/components/form.scss
+++ b/resources/styles/components/form.scss
@@ -1,12 +1,7 @@
-.container {
-  max-width: 45%;
-  margin: 2rem auto;
-}
-
 .form {
-  display: flex;
-  flex-direction: column;
   margin: 0 auto;
+  width: 100%;
+  // min-width: 20rem;
   background: $c-pure-white;
 
   &__title {
